--- a/quiz1-numpy.ipynb
+++ b/quiz1-numpy.ipynb
@@ -263,7 +263,7 @@
    "id": "4c0dde9b",
    "metadata": {},
    "source": [
-    "The loss is 0.3421 is mean squared error is used."
+    "The loss is 0.3421 when mean squared error is used."
    ]
   },
   {
@@ -452,7 +452,7 @@
    "id": "89a11521",
    "metadata": {},
    "source": [
-    "1. Create a 1d array M {1, 2, …16} using the arange function"
+    "<i> 1. Create a 1d array M {1, 2, …16} using the arange function </i>"
    ]
   },
   {
@@ -482,7 +482,7 @@
    "id": "6ffe5c8a",
    "metadata": {},
    "source": [
-    "2. Reshape M into 4x4 array and store it to N"
+    "<i>2. Reshape M into 4x4 array and store it to N </i> "
    ]
   },
   {
@@ -515,7 +515,7 @@
    "id": "cc2ba9c3",
    "metadata": {},
    "source": [
-    "3. Get the 2nd row of N"
+    "<i>3. Get the 2nd row of N </i>"
    ]
   },
   {
@@ -544,7 +544,7 @@
    "id": "23133a7b",
    "metadata": {},
    "source": [
-    "4. Get the minimum values for each column of N"
+    "<i>4. Get the minimum values for each column of N </i>"
    ]
   },
   {
@@ -573,7 +573,7 @@
    "id": "594a2f69",
    "metadata": {},
    "source": [
-    "5. Get the locations of the minimum values for each column of N"
+    "<i> 5. Get the locations of the minimum values for each column of N</i>"
    ]
   },
   {
@@ -602,7 +602,7 @@
    "id": "9e38922f",
    "metadata": {},
    "source": [
-    "6. Get the average of the whole matrix"
+    "<i>6. Get the average of the whole matrix </i>"
    ]
   },
   {
@@ -631,7 +631,7 @@
    "id": "59cfa0ed",
    "metadata": {},
    "source": [
-    "7. Create a vector V with 4 elements, each element is 1"
+    "<i> 7. Create a vector V with 4 elements, each element is 1</i>"
    ]
   },
   {
@@ -661,7 +661,7 @@
    "id": "af508009",
    "metadata": {},
    "source": [
-    "8. Take the dot product of N and V"
+    "<i>8. Take the dot product of N and V</i>"
    ]
   },
   {
